--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-OWNER_NUMBER=23xx
+OWNER_NUMBER=254769677305
 BOT_NAME= Akane ²⁵
 OWNER_NAME=Richie
 PACK_NAME= Akane ²⁵
 AUTHOR=Richie 
-PREFIX=.
+PREFIX=!
 TIME_ZONE=Africa/Lagos
 MENU_TYPE=v3
-SESSION_ID=
+SESSION_ID=Akane-Md_eb7e9f5e900f4f274f9994ee56a35c53
